--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@sentry/react": "^8.12.0",
+    "@sentry/vite-plugin": "^2.20.1",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
