--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@sentry/vite-plugin": "^2.20.1",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@react-three/drei": "^9.107.1",
+    "@react-three/fiber": "^8.16.8",
+    "three": "^0.165.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
